# bin2vex

./: CMakeLists.txt  README.md  bin2vex.c  bin2vex.h  build_pyvex.sh  env.sh  log_busy.out  main.c  utils.c  utils.h
pyvex/: setup.py  test_pyvex.py
pyvex/pyvex_c/: Makefile  pyvex.c
vex/: .Makefile.swp  Makefile
vex/priv/: ir_defs.c  main_util.c
